style(meal-planner): fix image overlapping with grid

--- a/source/components/meal-planner/meal-planner-recipe-card/meal-planner-recipe-card.css
+++ b/source/components/meal-planner/meal-planner-recipe-card/meal-planner-recipe-card.css
@@ -15,6 +15,7 @@
 .recipe-card-image {
   border-top-left-radius: initial;
   border-top-right-radius: initial;
+  padding-left: 1px;
 }
 
 .recipe-card-name {
